<resources>
    <string name="app_name">WAMOD Settings</string>

    <string name="conversation_last_seen">seen</string>
    <string name="conversation_contact_online">online now</string>
    <string name="type_a_message">Say something</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_theme_hangouts_conversation_config">theme_hangouts_conversation_config</string>
    <string name="chat_with">Chat with %1$s</string>
    <string name="profile_of">Profile of %1$s</string>
    <string name="wamod_general">General</string>
    <string name="wamod_statusbarcolor">Status bar color</string>
    <string name="wamod_toolbarcolor">Toolbar color</string>
    <string name="wamod_toolbarforeground">Toolbar foreground</string>
    <string name="wamod_navbarcolor">Navigation bar color</string>
    <string name="wamod_home">Home</string>
    <string name="wamod_hometheme">Home theme</string>
    <string name="wamod_conversation">Conversation</string>
    <string name="wamod_hideprofilephoto">Hide profile photo</string>
    <string name="wamod_hidetoolbaricons">Hide toolbar icons</string>
    <string name="wamod_proximitysensor">Proximity sensor</string>
    <string name="wamod_rightbubblecolor">Right bubble color</string>
    <string name="wamod_rightbubbletextcolor">Right bubble text color</string>
    <string name="wamod_rightbubbledatecolor">Right bubble date color</string>
    <string name="wamod_leftbubblecolor">Left bubble color</string>
    <string name="wamod_leftbubbletextcolor">Left bubble text color</string>
    <string name="wamod_leftbubbledatecolor">Left bubble date color</string>
    <string name="wamod_enablecustomparticipantnamecolor">Enable custom participant name color</string>
    <string name="wamod_enablecustomconversationbgcolor">Enable custom background color</string>
    <string name="wamod_customconversationbgcolor">Custom background color</string>
    <string name="wamod_bubblestyle">Bubble style</string>
    <string name="wamod_bubblelayoutstyle">Bubble layout style</string>
    <string name="wamod_tickstyle">Tick style</string>
    <string name="wamod_entrystyle">Entry style</string>
    <string name="wamod_personalizeentry">Personalize entry</string>
    <string name="wamod_overviewlollipopup">Overview (Lollipop and up)</string>
    <string name="wamod_enablecardcolor">Enable card color</string>
    <string name="wamod_openchatslikenewtasks">Open chats like new tasks</string>
    <string name="wamod_privacy">Privacy</string>
    <string name="wamod_freezelastseen">Freeze last seen</string>
    <string name="wamod_no2ndtick">No 2nd tick</string>
    <string name="wamod_nobluetick">No blue tick</string>
    <string name="wamod_hidetyping">Hide typing</string>
    <string name="wamod_alwaysonline">Always online</string>
    <string name="wamod_miscellaneous">Miscellaneous</string>
    <string name="wamod_disablecolorpicker">Disable color picker</string>
    <string name="wamod_checkforupdates">Check for updates</string>
    <string name="wamod_restoredefaults">Restore defaults</string>
    <string name="wamod_about">About</string>
    <string name="wamod_opengooglepluscommunity">Open Google+ community</string>
    <string name="wamod_opendevtwitterprofile">Open Dev Twitter profile</string>
    <string name="wamod_darkmode">Dark mode</string>
    <string name="wamod_customparticipantnamecolor">Custom participant name color</string>
    <string name="wamod_darkmodesummary">The UI gets darker</string>
    <string name="wamod_hideprofilephotosummary">Hides the profile photo from the toolbar</string>
    <string name="wamod_hidetoolbarattachsummary">Hides the call and attach icons</string>
    <string name="wamod_proximitysensorsummary">Enables the proximity sensor when you\'re listening a voice note</string>
    <string name="wamod_enablecardcolorsummary">Tints the card with the toolbar color</string>
    <string name="wamod_openchatslikenewtaskssummary">Multiple chats can be opened at the same time</string>
    <string name="wamod_freezelastseensummary">Your last seen will be frozen</string>
    <string name="wamod_no2ndticksummary">The sender won\'t know if you\'ve received the message</string>
    <string name="wamod_noblueticksummary">The sender won\'t know if you\'ve read the message</string>
    <string name="wamod_hidetypingsummary">The receiver won\'t know if you\'re typing</string>
    <string name="wamod_alwaysonlinesummary">But don\'t close the app from recents!</string>
    <string name="wamod_restoredefaultsprompt">Are you sure you want to restore ALL of your configurations?</string>
    <string name="wamod_donerestartwamod">Done, restart WAMOD</string>
    <string name="wamod_updateavailable">WAMOD update available</string>
    <string name="wamod_updateavailablemessage">%1$s is available for download. Your version is %2$s.</string>
    <string name="wamod_download">Download</string>
    <string name="wamod_later">Later</string>
    <string name="wamod_ignorethisupdate">Ignore this update</string>
    <string name="wamod_uptodate">WAMOD is up to date</string>
    <string name="wamod_errorcontactingserver">There was an error contacting the server</string>
    <string name="wamod_onlylollipopandup">Only Lollipop and up</string>
    <string name="wamod_insertahexcolorwithout">Insert a HEX color (without #)</string>
    <string name="wamod_wamodsettings">WAMOD Settings</string>
    <string name="wamod_conversation_toolbar_style">Toolbar style</string>
    <string name="wamod_closebutton">Close button</string>
    <string name="wamod_closebuttonsummary">Closes the activity instantly</string>
    <string name="wamod_unavailable">Unavailable</string>
    <string name="wamod_darkstatusbaricons">Dark status bar icons</string>
    <string name="wamod_marshmallowandup">Android 6.0 (Marshmallow) and up</string>
    <string name="wamod_unlinkdevice">Unlink device from WAMOD Themes</string>
    <string name="wamod_unlinkdevice_title">Unlink device</string>
    <string name="wamod_unlinkdevice_message">Are you sure you want to unlink your device from WAMOD Themes?</string>
    <string name="wamod_crash_title">WAMOD crashed!</string>
    <string name="wamod_crash_message">There was an error loading your configuration so the default values have been restored.</string>
    <string name="wamod_crash_button">Okay ☹</string>
    <string name="wamod_wamodthemes">WAMOD Themes️</string>
    <string name="wamod_wamodthemes_constantlycheck">Constantly check for a new theme</string>
    <string name="wamod_wamodthemes_constantlycheck_summary">Uses a little more of data</string>
    <string name="wamod_loading">Loading...</string>
    <string name="wamod_done">Done</string>
    <string name="wamod_error">There was an error</string>
    <string name="wamod_visitwamodthemes">Visit WAMOD Themes</string>
    <string name="wamod_androidgallery">Use Android Gallery</string>
    <string name="wamod_androidgallerysummary">You can attach photos and videos using your favorite gallery</string>
    <string name="tabs_indicator_color">Tabs indicator color</string>
    <string name="wamod_settings">WAMOD Settings</string>
    <string name="wamod_credits">Credits</string>
    <string name="new_group">New group</string>
    <string name="whatsapp_web">WhatsApp Web</string>
    <string name="settings_privacy_status">Status</string>
    <string name="profile_photo">Profile photo</string>
    <string name="starred_messages">Starred messages</string>
    <string name="search">Search</string>
    <string name="settings_general">Settings</string>
    <string name="settings_profile_info">Profile</string>
    <string name="wamod_darkdrawer">Dark drawer</string>
    <string name="wamod_selectdrawerbackground">Select drawer background</string>
    <string name="wamod_blacktextindrawerheader">Black text in drawer header</string>
    <string name="wamod_switchaccount_prompt_title">Switch account</string>
    <string name="wamod_switchaccount_prompt_message">Are you sure you want to switch your account?</string>
    <string name="calls">Calls</string>
    <string name="chats">Chats</string>
    <string name="contacts">Contacts</string>
    <string name="settings_privacy">Privacy</string>
    <string name="wamod_generalcolors">General colors</string>

    <!-- QTS -->
    <string name="wamod_qts_upload">Upload theme</string>
    <string name="wamod_qts_download">Download theme</string>
    <string name="wamod_qts_download_themeid">Theme ID</string>
    <string name="wamod_qts_upload_prompt">Are you sure you want to upload your theme?</string>
    <string name="wamod_qts_upload_success">Your theme ID %1$s was copied to your clipboard. Share it with your friends!</string>
</resources>
