<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:key="content"
    xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/wamod_general">
        <Preference android:title="@string/wamod_statusbarcolor" android:key="general_statusbarcolor" android:summary="" />
        <Preference android:title="@string/wamod_toolbarcolor" android:key="general_toolbarcolor" android:summary="" />
        <Preference android:title="@string/wamod_toolbarforeground" android:key="general_toolbarforeground" android:summary="" />
        <Preference android:title="@string/wamod_navbarcolor" android:key="general_navbarcolor" android:summary="" />
        <CheckBoxPreference android:title="@string/wamod_darkmode" android:key="general_darkmode" android:summary="@string/wamod_darkmodesummary" />
        <CheckBoxPreference android:title="@string/wamod_darkstatusbaricons" android:key="general_darkstatusbaricons" android:summary="@string/wamod_marshmallowandup" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/wamod_home">
        <ListPreference android:entries="@array/home_theme" android:title="@string/wamod_hometheme" android:key="home_theme" android:summary="WAMOD" android:entryValues="@array/home_theme_values" />
        <Preference android:title="@string/tabs_indicator_color" android:key="home_tabsindicatorcolor" android:summary="" />
        <CheckBoxPreference android:title="@string/wamod_darkdrawer" android:key="home_drawer_dark" />
        <Preference android:title="@string/wamod_selectdrawerbackground" android:key="home_drawer_bg" />
        <CheckBoxPreference android:title="@string/wamod_blacktextindrawerheader" android:key="home_drawer_blackheadertext" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/wamod_conversation">
        <ListPreference android:entries="@array/conversation_style_toolbar" android:title="@string/wamod_conversation_toolbar_style" android:key="conversation_style_toolbar" android:entryValues="@array/conversation_style_toolbar_values" />
        <CheckBoxPreference android:title="@string/wamod_hideprofilephoto" android:key="conversation_hideprofilephoto" android:summary="@string/wamod_hideprofilephotosummary" />
        <CheckBoxPreference android:title="@string/wamod_hidetoolbaricons" android:key="conversation_hidetoolbarattach" android:summary="@string/wamod_hidetoolbarattachsummary" />
        <CheckBoxPreference android:title="@string/wamod_closebutton" android:key="conversation_toolbarexit" android:summary="@string/wamod_closebuttonsummary" />
        <Preference android:title="@string/wamod_rightbubblecolor" android:key="conversation_rightbubblecolor" android:summary="" />
        <Preference android:title="@string/wamod_rightbubbletextcolor" android:key="conversation_rightbubbletextcolor" android:summary="" />
        <Preference android:title="@string/wamod_rightbubbledatecolor" android:key="conversation_rightbubbledatecolor" android:summary="" />
        <Preference android:title="@string/wamod_leftbubblecolor" android:key="conversation_leftbubblecolor" android:summary="" />
        <Preference android:title="@string/wamod_leftbubbletextcolor" android:key="conversation_leftbubbletextcolor" android:summary="" />
        <Preference android:title="@string/wamod_leftbubbledatecolor" android:key="conversation_leftbubbledatecolor" android:summary="" />
        <SwitchPreference android:title="@string/wamod_enablecustomparticipantnamecolor" android:key="conversation_customparticipantcolorbool" android:summary="" />
        <Preference android:title="@string/wamod_customparticipantnamecolor" android:key="conversation_customparticipantcolor" android:summary="" />
        <SwitchPreference android:title="@string/wamod_enablecustomconversationbgcolor" android:key="conversation_custombackcolorbool" android:summary="" />
        <Preference android:title="@string/wamod_customconversationbgcolor" android:key="conversation_custombackcolor" android:summary="" />
        <ListPreference android:entries="@array/conversation_style_bubble" android:title="@string/wamod_bubblestyle" android:key="conversation_style_bubble" android:summary="" android:entryValues="@array/conversation_style_bubble_values" />
        <ListPreference android:entries="@array/conversation_style_tick" android:title="@string/wamod_tickstyle" android:key="conversation_style_tick" android:summary="" android:entryValues="@array/conversation_style_tick_values" />
        <ListPreference android:entries="@array/conversation_style_entry" android:title="@string/wamod_entrystyle" android:key="conversation_style_entry" android:summary="" android:entryValues="@array/conversation_style_entry_values" />
        <Preference android:enabled="false" android:title="@string/wamod_personalizeentry" android:key="conversation_style_entry_config" />
        <CheckBoxPreference android:title="@string/wamod_androidgallery" android:key="conversation_androidgallery" android:summary="@string/wamod_androidgallerysummary" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/wamod_overviewlollipopup">
        <CheckBoxPreference android:title="@string/wamod_enablecardcolor" android:key="overview_cardcolor" android:summary="@string/wamod_enablecardcolorsummary" />
        <CheckBoxPreference android:title="@string/wamod_openchatslikenewtasks" android:key="overview_multiplechats" android:summary="@string/wamod_openchatslikenewtaskssummary" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/wamod_privacy">
        <CheckBoxPreference android:title="@string/wamod_freezelastseen" android:key="privacy_freezelastseen" android:summary="@string/wamod_freezelastseensummary" />
        <!--<CheckBoxPreference android:title="@string/wamod_no2ndtick" android:key="privacy_no2ndTick" android:summary="@string/wamod_no2ndticksummary" />-->
        <CheckBoxPreference android:title="@string/wamod_nobluetick" android:key="privacy_noBlueTick" android:summary="@string/wamod_noblueticksummary" />
        <CheckBoxPreference android:title="@string/wamod_hidetyping" android:key="privacy_hideTyping" android:summary="@string/wamod_hidetypingsummary" />
        <CheckBoxPreference android:title="@string/wamod_alwaysonline" android:key="privacy_alwaysOnline" android:summary="@string/wamod_alwaysonlinesummary" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/wamod_wamodthemes">
        <Preference android:icon="@null" android:title="Device ID" android:key="device_id" android:summary="@string/wamod_unavailable" />
        <Preference android:icon="@null" android:title="@string/wamod_unlinkdevice" android:key="wamodthemes_unlinkdevice" />
        <!--<CheckBoxPreference android:icon="@null" android:title="@string/wamod_wamodthemes_constantlycheck" android:summary="@string/wamod_wamodthemes_constantlycheck_summary" android:key="wamodthemes_constantlycheck" />-->
        <Preference android:icon="@null" android:title="@string/wamod_visitwamodthemes">
            <intent android:action="android.intent.action.VIEW" android:data="http://wamod.ml/" />
        </Preference>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/wamod_miscellaneous">
        <CheckBoxPreference android:title="@string/wamod_disablecolorpicker" android:key="debug_disablecolorpicker" />
        <Preference android:icon="@null" android:title="@string/wamod_checkforupdates" android:key="checkforupdates" />
        <Preference android:icon="@null" android:title="@string/wamod_restoredefaults" android:key="restoredefaults" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/wamod_about" android:key="conversation_section">
        <Preference android:icon="@null" android:title="WAMOD 1.0.5.2" android:summary="WhatsApp 2.12.489" />
        <Preference android:icon="@null" android:title="@string/wamod_opengooglepluscommunity">
            <intent android:action="android.intent.action.VIEW" android:data="https://plus.google.com/communities/100280777780708899394" />
        </Preference>
        <Preference android:icon="@null" android:title="@string/wamod_opendevtwitterprofile">
            <intent android:action="android.intent.action.VIEW" android:data="https://twitter.com/brianelv" />
        </Preference>
        <Preference android:icon="@null" android:title="@string/wamod_credits" android:key="credits" />
    </PreferenceCategory>
</PreferenceScreen>