<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:key="content"
    xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/wamod_about" android:key="conversation_section">
        <Preference android:icon="@null" android:title="WAMOD 1.0.5.2" android:summary="WhatsApp 2.12.489" />
        <Preference android:icon="@null" android:title="@string/wamod_opengooglepluscommunity">
            <intent android:action="android.intent.action.VIEW" android:data="https://plus.google.com/communities/100280777780708899394" />
        </Preference>
        <Preference android:icon="@null" android:title="@string/wamod_opendevtwitterprofile">
            <intent android:action="android.intent.action.VIEW" android:data="https://twitter.com/brianelv" />
        </Preference>
        <Preference android:icon="@null" android:title="@string/wamod_credits" android:key="credits" />
    </PreferenceCategory>
</PreferenceScreen>