<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    <com.wamod.ActionPreference android:icon="@null" android:title="Device ID" android:key="device_id" android:summary="@string/wamod_unavailable" />
    <com.wamod.ActionPreference android:icon="@null" android:title="@string/wamod_unlinkdevice" android:key="wamodthemes_unlinkdevice" />
    <!--<CheckBoxPreference android:icon="@null" android:title="@string/wamod_wamodthemes_constantlycheck" android:summary="@string/wamod_wamodthemes_constantlycheck_summary" android:key="wamodthemes_constantlycheck" />-->
    <Preference android:icon="@null" android:title="@string/wamod_visitwamodthemes">
        <intent android:action="android.intent.action.VIEW" android:data="http://wamod.ml/" />
    </Preference>
</PreferenceScreen>