<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="62dp">
    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="6dp"
        android:background="@drawable/wamod_bottomnav_shadow"/>
    <com.wamod.BottomNavigation
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:background="#ffffff"
        android:id="@+id/wamod_bottomnav">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:id="@+id/wamod_bottomnav_calls">
            <ImageView
                android:layout_width="18dp"
                android:layout_height="28dp"
                android:src="@drawable/wamod_drawer_ic_calls"
                android:layout_centerHorizontal="true"
                android:paddingTop="10dp"
                android:tint="#555555"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/calls"
                android:layout_centerInParent="true"
                android:paddingTop="24dp"
                android:textColor="#555555"
                android:textSize="12sp"
                android:gravity="center"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:id="@+id/wamod_bottomnav_chats">
            <ImageView
                android:layout_width="18dp"
                android:layout_height="28dp"
                android:src="@drawable/wamod_drawer_ic_chats"
                android:layout_centerHorizontal="true"
                android:paddingTop="10dp"
                android:tint="#555555"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/chats"
                android:layout_centerInParent="true"
                android:paddingTop="24dp"
                android:textColor="#555555"
                android:textSize="12sp"
                android:gravity="center"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:id="@+id/wamod_bottomnav_contacts">
            <ImageView
                android:layout_width="18dp"
                android:layout_height="28dp"
                android:src="@drawable/wamod_drawer_ic_contacts"
                android:layout_centerHorizontal="true"
                android:paddingTop="10dp"
                android:tint="#555555"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/contacts"
                android:layout_centerInParent="true"
                android:paddingTop="24dp"
                android:textColor="#555555"
                android:textSize="12sp"
                android:gravity="center"/>
        </RelativeLayout>
    </com.wamod.BottomNavigation>
</RelativeLayout>
